--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Привет мир!</title>	
+	<style>
+		.block-bg{
+			background:url("https://th.bing.com/th/id/OIP.DMbSQ7CGNFQyvrANA8I7ZwHaE7?pid=ImgDet&rs=1");
+			background-size: cover;
+		}
+		.block-bg>.col-7{
+			background: RGBA(0,0,0, .5);
+			box-shadow: 0 0 10px 5px rgba(255,255,255, 0.5);
+		}
+	</style>
   </head>
   <body>
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -68,43 +78,53 @@
 		<span class="visually-hidden">Следующий</span>
 	  </button>
 	</div>
-	<div class="container">
+	<div class="container py-4">
+		<h1 class="text-center mb-3">WEB-technology</h1>
 		<div class="row text-center"> 
 			<div class="col-sm"> 
 				<i class="fa-brands fa-html5 fa-10x"></i> 
+				<p class="h3">HTML</p>
 			</div>
 			<div class="col-sm">
 				<i class="fa-brands fa-css3-alt fa-10x"></i>
+				<p class="h3">CSS</p>
 			</div>
 			<div class="col-sm">
 				<i class="fa-brands fa-js-square fa-10x"></i>
+				<p class="h3">JavaScript</p>
 			</div>
 		</div>
 	</div>
-	<div class="container">          
-		<div class="row">            
-			<div class="col-sm-4">   
-			 <img src="img/image.jpg" width="100%">
-			</div>			
+	<div class="container-fluid block-bg py-5">
+		<div class="col-7 mx-auto text-light p-3">
+			<p>
+				Unlimited Free Texting. Send texts, group messages, pictures, videos, and emoji from your phone or the web. Calling & Voicemail. Make reliable WiFi calls without a carrier plan and customize your
+			</p>
+		</div>
+	</div>
+	
+	<div class="container">
+		<div class="row">
 			<div class="col-sm-4">
-			text
-			</div>		
-			<div class="col-sm-4">
-			 <img src="img/image.jpg" width="100%">
 			</div>
 			<div class="col-sm-8">
-			 <img src="img/image.jpg" width="100%">
-			</div>
-			<div class="col-sm-4">
-			text
+				<h2 class="text-center">Feedback</h2>
+				<form>
+					<div class="mb-3">
+						<input class="form-control" placeholder="Name">
+					</div>
+					<div class="mb-3">
+						<input class="form-control" placeholder="Phone number"> 
+					</div>	
+					<div class="mb-3">
+						<textarea class="form-control" placeholder="Message"></textarea>
+					</div>
+					<div class="mb-3">
+						<input type="submit" class="form-control btn btn-primary"> 
+					</div>
+				</form>
 			</div>
 		</div>
-	</div>
-	<div class="container-fluid">    
-		<h1>Это div с классом container - fluid</h1>
-			<div class="container">
-				<h1>Это div с классом container</h1>
-			</div>
 	</div>
     <!-- Дополнительный JavaScript; выберите один из двух! -->
 
