--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 			<li class="nav-item">
 			  <a class="nav-link" href="#">Link</a>
 			</li>
+			<li class="nav-item">
+			  <a class="nav-link" href="#">Contact-us</a>
+			</li>
 			<li class="nav-item dropdown">
 			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
 				Dropdown
@@ -103,29 +106,50 @@
 		</div>
 	</div>
 	
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-4">
-			</div>
-			<div class="col-sm-8">
-				<h2 class="text-center">Feedback</h2>
-				<form>
-					<div class="mb-3">
-						<input class="form-control" placeholder="Name">
-					</div>
-					<div class="mb-3">
-						<input class="form-control" placeholder="Phone number"> 
-					</div>	
-					<div class="mb-3">
-						<textarea class="form-control" placeholder="Message"></textarea>
-					</div>
-					<div class="mb-3">
-						<input type="submit" class="form-control btn btn-primary"> 
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+                <h2 class="text-center mb-3">Contact-us</h2>
+                    <div class="my-3">
+                        <i class="fa-solid fa-location-dot fa-1x"></i>
+                        <p class="h6">WEB Site Solution
+                        <br>
+                        "P.O. box 43083 Cascade"
+                        <br>
+                        "Burnaby BS 45"
+                        <br>
+                        "Canada"
+                        </p>
+                    </div>
+                    <div class="my-3">
+                        <i class="fa-solid fa-square-phone fa-1x"></i> 
+                        <p class="h6">+7(701)501-50-28</p>
+                    </div>
+                    <div class="my-3">
+                        <i class="fa-solid fa-at fa-1x"></i>
+                        <p class="h6">saule2000@mail.ru</p>
+                    </div>
+            </div>
+            <div class="col-sm-8">
+                <h2 class="text-center mb-3">Feedback</h2>
+                <form action="/php/handlerForm.php" method="post">
+                	<div class="my-3">
+                		<input name="name" class="form-control" placeholder="name">
+                	</div>
+                	<div class="mb-3">
+                		<input name="phone" class="form-control" placeholder="phone"> 
+                	</div>	
+                	<div class="mb-3">
+                		<textarea name="message" class="form-control" placeholder="message"></textarea>
+                	</div>
+                	<div class="mb-3">
+                		<input type="submit" class="form-control btn btn-primary"> 
+                	</div>
+                </form>
+            </div>
+        </div>
+    </div>
+	
     <!-- Дополнительный JavaScript; выберите один из двух! -->
 
     <!-- Вариант 1: Bootstrap в связке с Popper -->
